# stringFinder

./: .gitignore  CMakeLists.txt  Makefile  README.md  console.cpp  console.hpp  file.cpp  file.hpp  filequeue.cpp  filequeue.hpp  filesystem.cpp  filesystem.hpp  main.cpp  main.hpp  searcher.cpp  searcher.hpp  stringFinder.sln  stringFinder.vcxproj  stringFinder.vcxproj.filters
.github/workflows/: build_lib.yml
include/string_finder/: console.hpp  file.hpp  filequeue.hpp  filesystem.hpp  searcher.hpp
main/: CMakeLists.txt  main.cpp  main.hpp
src/: console.cpp  file.cpp  filequeue.cpp  filesystem.cpp  searcher.cpp
stringFinder/: README.md  console.cpp  console.hpp  filesystem.hpp  main.hpp  searcher.cpp  stringFinder.vcxproj
